--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,10 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
+  username: postgres
+  password: password
+  host: localhost
+  
 development:
   <<: *default
   database: crazyeight_development
@@ -81,5 +84,5 @@ test:
 production:
   <<: *default
   database: crazyeight_production
-  username: crazyeight
-  password: <%= ENV['CRAZYEIGHT_DATABASE_PASSWORD'] %>
+  # username: crazyeight
+  # password: <%= ENV['CRAZYEIGHT_DATABASE_PASSWORD'] %>
